# AetherOS

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  DOCKER_SETUP_COMPLETE.md  Dockerfile.dev  Dockerfile.prod  KERNEL_INTEGRATION_SUMMARY.md  LICENSE  Master Plan Komprehensif_ AetherOS AI Company.md  README.md  ROADMAP.md  build_execution_engine.py  demo_kernel_integration.py  demo_runtime_resource_resolution.py  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  docker_verification_report.json  generate_schema.py  mkdocs.yml  pyproject.toml  refactor_m05.py  scaffold_kernel.py  setup.cfg  validate_architecture.py
.agents/: AGENTS.md
.ai/: DECISION_HIERARCHY.md  DEVELOPMENT_CONSTITUTION.md  DEVELOPMENT_PROTOCOL.md  ENTRYPOINT.md  (+10 more)
artifact/: README.md  pyproject.toml
artifact/src/aether_artifact/adapters/memory/: backend.py
artifact/src/aether_artifact/capabilities/: registry.py
artifact/src/aether_artifact/classification/: taxonomy.py
artifact/src/aether_artifact/core/: domain.py
artifact/src/aether_artifact/graph/: semantic_graph.py
artifact/src/aether_artifact/lifecycle/: states.py
artifact/src/aether_artifact/projection/: engine.py
artifact/src/aether_artifact/protocols/: backend.py
artifact/src/aether_artifact/references/: models.py
artifact/src/aether_artifact/relationships/: models.py
artifact/src/aether_artifact/resolver/: semantic.py
artifact/src/aether_artifact/uri/: parser.py
cli/: README.md  pyproject.toml
cli/src/aether_cli/: app.py
cli/src/aether_cli/core/: context.py  events.py  metadata.py  output.py  pipeline.py  registry.py
cli/src/aether_cli/groups/: doctor.py  inspect.py  new.py
organization/: README.md  pyproject.toml
organization/src/aether_organization/adapters/: memory_backend.py
organization/src/aether_organization/audit/: domain.py
organization/src/aether_organization/config/: configuration.py
organization/src/aether_organization/core/: identity.py
organization/src/aether_organization/directory/: membership.py  rbac.py
organization/src/aether_organization/policies/: engine.py
organization/src/aether_organization/protocols/: backend.py
organization/src/aether_organization/registry/: catalog.py  workspaces.py
repository/: README.md  pyproject.toml
repository/src/aether_repository/adapters/: git_backend.py  memory_backend.py
repository/src/aether_repository/core/: domain.py
repository/src/aether_repository/graph/: models.py
repository/src/aether_repository/protocols/: backend.py
repository/src/aether_repository/references/: models.py
repository/src/aether_repository/resolver/: alias.py
repository/src/aether_repository/uri/: parser.py
runtime/: README.md  manifest.yaml  pyproject.toml
runtime/src/aether_runtime/: __init__.py  capabilities.py  kernel_bridge.py  kernel_integration.py  sdk.py
runtime/src/aether_runtime/adapters/: execution.py  kernel.py
runtime/src/aether_runtime/context/: context.py
runtime/src/aether_runtime/events/: dispatcher.py
runtime/src/aether_runtime/exceptions/: permission.py  runtime.py  validation.py
runtime/src/aether_runtime/facade/: __init__.py  artifact.py  diagnostics.py  execution.py  kernel.py  knowledge.py  organization.py  provider_router.py  repository.py  storage.py  workflow.py  workspace.py  workspace_app.py
runtime/src/aether_runtime/middleware/: pipeline.py
runtime/src/aether_runtime/models/health/: diagnostics.py
runtime/src/aether_runtime/models/metadata/: manifest.py
runtime/src/aether_runtime/models/responses/: __init__.py  execution.py  kernel.py  knowledge.py
runtime/src/aether_runtime/services/: execution.py  kernel.py  knowledge.py
runtime/src/aether_runtime/session/: session.py
storage/: README.md  manifest.yaml  pyproject.toml
storage/src/aether_storage/: __init__.py  bootstrap.py
storage/src/aether_storage/adapters/: __init__.py  config.py  registry.py
storage/src/aether_storage/adapters/memory/: provider.py
storage/src/aether_storage/adapters/postgres/: __init__.py  provider.py
storage/src/aether_storage/adapters/redis/: __init__.py  provider.py
storage/src/aether_storage/adapters/vfs/: adapter.py
storage/src/aether_storage/cache/: provider.py
storage/src/aether_storage/core/: README.md  handle.py  mount.py  provider.py
storage/src/aether_storage/diagnostics/: health.py
storage/src/aether_storage/events/: events.py
storage/src/aether_storage/limits/: quota.py
storage/src/aether_storage/transactions/: transaction.py
storage/src/aether_storage/uri/: README.md  builder.py  matcher.py  parser.py  resolver.py  resource_uri.py
workspace-app/: README.md  pyproject.toml
workspace-app/src/aether_workspace_app/application/: context.py
workspace-app/src/aether_workspace_app/application/buses/: bus.py
workspace-app/src/aether_workspace_app/application/commands/: models.py
workspace-app/src/aether_workspace_app/application/handlers/: commands.py
workspace-app/src/aether_workspace_app/application/pipeline/: engine.py
workspace-app/src/aether_workspace_app/application/queries/: models.py
workspace-app/src/aether_workspace_app/application/results/: models.py
workspace-app/src/aether_workspace_app/composition/: bootstrap.py  registry.py
workspace-app/src/aether_workspace_app/events/: models.py
workspace-app/src/aether_workspace_app/inspectors/health/: inspector.py
workspace-app/src/aether_workspace_app/loaders/: assembler.py
workspace-app/src/aether_workspace_app/orchestrator/: engine.py
(+791 files in other folders)
