[project]
name = "aetheros"
version = "1.0.0"
description = "The Open Agent Operating System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "syrupy>=4.6.1",
    "mutmut>=2.4.4",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pyright>=1.1.360",
    "import-linter>=2.0",
    "codespell>=2.3.0",
    "pre-commit>=3.7.0",
    "mkdocs-material>=9.5.0",
    "bandit>=1.7.9",
    "safety>=3.2.0",
    "pip-audit>=2.7.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=core --cov-report=term-missing"
testpaths = [
    "tests",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pyright]
include = ["core", "tools", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"

[tool.importlinter]
root_package = "core"

[[tool.importlinter.contracts]]
name = "Execution Engine cannot import Kernel Internal"
type = "forbidden"
source_modules = ["core.execution"]
forbidden_modules = ["core.kernel.internal"]

[[tool.importlinter.contracts]]
name = "Kernel cannot import Execution Engine"
type = "forbidden"
source_modules = ["core.kernel"]
forbidden_modules = ["core.execution"]

[tool.hatch.build.targets.wheel]
packages = ["core", "tools"]
