[project]
name = "aether-cli"
version = "1.0.0"
description = "AetherOS Developer Platform Runtime"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "pydantic>=2.7.0",
]

[project.scripts]
aether = "aether_cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aether_cli"]
