[project]
name = "aether-organization"
version = "1.0.0"
description = "AetherOS Organization Runtime (Operating Context)"
authors = [
    { name = "AetherOS Contributors" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
