[project]
name = "aether-runtime"
version = "1.0.0"
description = "AetherOS Internal Runtime SDK"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aether_runtime"]
